Edits to offer cards

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -226,7 +226,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">2 preparation sessions (90 min each)</span>
+							<span class="text-gray-700">2 preparation sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -238,7 +238,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">2 integration sessions (90 min each)</span>
+							<span class="text-gray-700">2 integration sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -277,7 +277,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">4 preparation sessions (90 min each)</span>
+							<span class="text-gray-700">4 preparation sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -289,7 +289,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">6 integration sessions (90 min each)</span>
+							<span class="text-gray-700">6 integration sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -307,7 +307,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">Phone/text support for 90 days</span>
+							<span class="text-gray-700">Phone/text support for 30 days</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -336,7 +336,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">6 preparation sessions (90 min each)</span>
+							<span class="text-gray-700">6 preparation sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -348,7 +348,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
 								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
 							</svg>
-							<span class="text-gray-700">12 integration sessions (90 min each)</span>
+							<span class="text-gray-700">12 integration sessions</span>
 						</li>
 						<li class="flex items-start">
 							<svg class="w-5 h-5 text-green-500 mr-3 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -388,7 +388,7 @@ import ConsultationModal from '../components/ConsultationModal.astro';
 					All packages include comprehensive medical screening, safe legal psilocybin, and professional facilitation in Oregon or Colorado.
 				</p>
 				<p class="text-sm text-gray-500">
-					Payment plans available. Insurance reimbursement support provided.
+					Payment plans available based on income and financial need. Contact us to discuss options.
 				</p>
 			</div>
 		</div>
